welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: not found: value nums
  var haut=nums(0)
           ^island:4: error: not found: value nums
  for (k<-1 to nums.lenght-1){
               ^island:5: error: not found: value nums
    if (nums(k)>haut){
        ^